<resources>
    <string name="app_name">ClothesShop</string>
    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Hasło</string>
    <string name="prompt_password_repeat">Powtórz Hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_up">Zarejestruj się</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>

<!--    <string name="invalid_username">Not a valid username</string>-->
    <string name="invalid_username">Nieprawidłowy E-mail</string>
<!--    <string name="invalid_password">Password must be >5 characters</string>-->
    <string name="invalid_password">Hasło musi mieć więcej niż 5 znaków</string>
    Logowanie nie powiodło się
<!--    <string name="login_failed">"Login failed"</string>-->
    <string name="login_failed">"Logowanie nie powiodło się"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Proszę czekać</string>
    <string name="action_sign_up_anonymous">Zaloguj się Anonimowo</string>
    <string name="title_filter_type">Wybierz dla kogo</string>
    <string name="cancel">Anulować</string>
    <string name="decline">Nie</string>
    <string name="accept">Ok</string>
    <string name="find_product">Szukaj produkt</string>
</resources>