<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.signup.SignUpFragment">

    <!--    android:visibility="gone"-->

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:visibility="gone"
        android:id="@+id/tex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="Udało się założyć konto Podtwierdź pocztę (kliknij  link w liście do poczty, który podałeś podczas logowania) i przejdź do logowania"
        android:textColor="@android:color/darker_gray"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297" />

    <Button
        android:visibility="gone"
        android:id="@+id/do_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Do Logowania"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/tex"
        app:layout_constraintVertical_bias="0.105" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/prompt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_sign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"

            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/searchLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/prompt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchLayout"
        app:layout_constraintWidth_percent="0.6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:inputType="textWebPassword"

            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/prompt_password_repeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchLayout1"
        app:layout_constraintWidth_percent="0.6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_sign_up_repeat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:inputType="textWebPassword"

            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button

        android:id="@+id/signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"


        android:text="@string/action_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchLayout3" />


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:indeterminateDrawable="@drawable/progress_br"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/login"
        tools:layout_editor_absoluteY="827dp" />



</androidx.constraintlayout.widget.ConstraintLayout>